# cybersec-survey

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cybersec_survey/: app.py  config.py  run.py
cybersec_survey/data/: news_items.yaml
cybersec_survey/db/: __init__.py  models.py
cybersec_survey/static/css/: styles.css
cybersec_survey/static/js/: app.js
cybersec_survey/templates/: classify.html  export.html  index.html  info.html  login.html  welcome.html
survey_data/: default_news_items.json
